--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,9 @@ html, body {
 
 .header h1, .footer h1, .footer h4 {
   margin-top: 5px;
-  padding: 0px;
+  margin-bottom: 0px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   text-align: center;
   color: white;
   font-size: 25px;
@@ -66,6 +68,10 @@ html, body {
   margin-left: 5%;
   margin-right: 5%;
   font-family: "Comic Sans MS", Arial, Helvetica, Verdana, sans-serif;
+}
+
+.header h1 {
+  font-weight: bold;
 }
 
 .footer h4 {
