--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ html, body {
 */
 
 .bodySectionContainer {
+  padding: 10px;
   height: 60vh;
   overflow: auto;
   background-color: rgb(245, 235, 225);
@@ -45,6 +46,11 @@ html, body {
   margin-bottom: 5px;
   width: 100%;
   font-family: "Comic Sans MS", Arial, Helvetica, Verdana, sans-serif;
+}
+
+.contactFormInputField {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .header, .footer {
@@ -106,6 +112,19 @@ a:visited, a:link {
   height: 300px;
   overflow: auto;
   vertical-align: top;
+  padding: 10px;
+  border-color: orange;
+}
+
+.contactFormStatusText {
+  text-align: center;
+  font-style: italic;
+}
+
+button:active {
+  color: white;
+  font-weight: bold;
+  background-color: purple;
 }
 
 .nav-tabs {
