--- a/src/style.css
+++ b/src/style.css
@@ -136,6 +136,7 @@ button:active {
   color: white;
   font-weight: bold;
   background-color: purple;
+  border-radius: 5px;
 }
 
 .nav-tabs {
@@ -143,18 +144,26 @@ button:active {
 }
 
 .nav-item {
-  color: white;
+  color: black;
   background-color: gray;
+  border: 1px solid purple;
+  border-radius: 5px 5px 0px 0px;
   font-family: "Comic Sans MS", Arial, Helvetica, Verdana, sans-serif;
 }
 
 .nav-link {
   color: black;
   font-size: 1em;
+  /*border: 1px solid purple;*/
+}
+
+.nav-link:visited {
+  color: black;
 }
 
 .nav-link:hover {  /*  className = ".nav-link active" ? */
-  color: yellow !important;
+  color: yellow !important;  /* or purple */
+  border-color: white;
 }
 
 .nav-link_active {
