--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,8 @@ button:active {
 
 .nav-tabs {
   background-color: gray;
+  /* TMK */
+  height: 30px;
 }
 
 .nav-item {
@@ -163,12 +165,18 @@ button:active {
   border: 1px solid purple;
   border-radius: 5px 5px 0px 0px;
   font-family: "Comic Sans MS", Arial, Helvetica, Verdana, sans-serif;
+  height: 30px;
 }
 
 .nav-link {
   color: black;
   font-size: 1em;
   /*border: 1px solid purple;*/
+  margin-top: -8px;
+}
+
+.nav-link a {
+  margin-bottom: 0px;
 }
 
 .nav-link:visited {
@@ -186,11 +194,11 @@ button:active {
   text-decoration: none;
   background-color: rgb(52, 54, 56);
   padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   border-radius: 5px 5px 0px 0px;
 }
 
