--- a/src/style.css
+++ b/src/style.css
@@ -155,8 +155,6 @@ button:active {
 
 .nav-tabs {
   background-color: gray;
-  /* TMK */
-  height: 30px;
 }
 
 .nav-item {
@@ -165,18 +163,12 @@ button:active {
   border: 1px solid purple;
   border-radius: 5px 5px 0px 0px;
   font-family: "Comic Sans MS", Arial, Helvetica, Verdana, sans-serif;
-  height: 30px;
 }
 
 .nav-link {
   color: black;
   font-size: 1em;
   /*border: 1px solid purple;*/
-  margin-top: -8px;
-}
-
-.nav-link a {
-  margin-bottom: 0px;
 }
 
 .nav-link:visited {
@@ -186,9 +178,6 @@ button:active {
 .nav-link:hover {  /*  className = ".nav-link active" ? */
   color: yellow !important;  /* or purple */
   border-color: white;
-  height: 30px;
-  padding-top: 0px;
-  margin-top: 0px;
 }
 
 .nav-link_active {
@@ -197,11 +186,11 @@ button:active {
   text-decoration: none;
   background-color: rgb(52, 54, 56);
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
-  /* vertical-align: middle; */
+  vertical-align: middle;
   border-radius: 5px 5px 0px 0px;
 }
 
