--- a/src/style.css
+++ b/src/style.css
@@ -190,7 +190,7 @@ button:active {
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   border-radius: 5px 5px 0px 0px;
 }
 
